--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,8 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
-      <ion-content>
+      <ion-content class="full-height">
+        <div id="map_canvas"></div>
       </ion-content>
     </ion-pane>
   </body>
